--- a/nativescript/app/my-quotes/new-quote/new-quote.component.scss
+++ b/nativescript/app/my-quotes/new-quote/new-quote.component.scss
@@ -1,3 +1,23 @@
-StackLayout{
+@import "variables";
 
+.quote-body-input {
+  height: 200;
+}
+
+
+.form {
+  .input-field {
+    .label {
+      color: $c-primary;
+    }
+
+    .error-msg {
+      font-size: 12;
+      color: $c-danger;
+    }
+
+    .hr-light.error {
+      background-color: $c-danger;
+    }
+  }
 }
