--- a/nativescript/app/quotes/quotes-list/quotes-list.component.html
+++ b/nativescript/app/quotes/quotes-list/quotes-list.component.html
@@ -8,10 +8,11 @@
     <template
         let-item="item"
         let-i="index">
-      <StackLayout>
+      <StackLayout class="quote-card-container">
         <CardView
             margin="10"
-            elevation="10">
+            elevation="10"
+            shadowOpacity="0.2">
           <StackLayout class="quote-card">
               <Label
                 class="quote-body"
