--- a/x-shared/styles/_variables.scss
+++ b/x-shared/styles/_variables.scss
@@ -3,7 +3,7 @@
 // theme colors
 $c-primary: #2874f0;
 $c-secondary: #6da4ff;
-$c-accent: #ffc10d;
+$c-accent: #F44336;
 $c-danger: #d50000 !default;
 
 // common colors
