--- a/nativescript/app/my-quotes/my-quotes.component.html
+++ b/nativescript/app/my-quotes/my-quotes.component.html
@@ -3,7 +3,7 @@
       (tap)="createQuote()"
       ios.position="right">
     <Button
-        class="mdi action-bar-icon"
+        class="mdi action-bar-icon borderless-btn"
         [text]="'mdi-add' | fonticon"></Button>
   </ActionItem>
 </ActionBar>
