--- a/nativescript/app/my-quotes/new-quote/new-quote.component.html
+++ b/nativescript/app/my-quotes/new-quote/new-quote.component.html
@@ -3,7 +3,7 @@
       (tap)="save(vm.dataModel)"
       ios.position="right">
     <Button
-        class="mdi action-bar-icon"
+        class="mdi action-bar-icon borderless-btn"
         [text]="'mdi-save' | fonticon">
     </Button>
   </ActionItem>
