--- a/nativescript/app/quotes/quotes-list/quotes-list.component.scss
+++ b/nativescript/app/quotes/quotes-list/quotes-list.component.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
-.quote-card-container {
+.quotes-list-container {
   background-color: $c-blue-grey-50;
+}
+
+.quote-card-container {
+  background-color: transparent;
 }
