Styling for android statusbar. Not showing activity-indicator for Favourite quotes page.

--- a/nativescript/app/quotes/quotes-list/quotes-list.component.html
+++ b/nativescript/app/quotes/quotes-list/quotes-list.component.html
@@ -52,6 +52,6 @@
   <ActivityIndicator
       class="activity-indicator"
       [visibility]="!vm.lstQuotes.length ? 'visible' : 'collapsed'"
-      [busy]="!vm.lstQuotes.length">
+      [busy]="!vm.lstQuotes.length && quotesBy !== 'favourites'">
     </ActivityIndicator>
 </GridLayout>
