--- a/nativescript/app/my-quotes/my-quotes.component.scss
+++ b/nativescript/app/my-quotes/my-quotes.component.scss
@@ -1,3 +1,9 @@
-StackLayout{
+@import "variables";
 
+.fab-button {
+  height: 70;
+  margin: 15;
+  background-color: $c-accent;
+  horizontal-align: right;
+  vertical-align: bottom;
 }
