Hiding ListView till the list-items are loaded in authors/categories list as separator is being visible on iOS even when list-items are not loaded.

--- a/nativescript/app/authors/authors-list.component.html
+++ b/nativescript/app/authors/authors-list.component.html
@@ -5,7 +5,8 @@
   <GridLayout>
     <ListView
         class="list-group"
-        [items]="vm.authors$ | async">
+        [items]="vm.authors$ | async"
+        [visibility]="vm.lstAuthors.length ? 'visible' : 'collapsed'">
       <template let-item="item">
         <StackLayout
             class="list-group-item"
