Using material back arrow icon for android. Changed load_more_item activity indicator color to accent color.

--- a/nativescript/app/my-quotes/new-quote/new-quote.component.html
+++ b/nativescript/app/my-quotes/new-quote/new-quote.component.html
@@ -9,7 +9,7 @@
   </ActionItem>
   <NavigationButton
       text="Back"
-      android.systemIcon="ic_menu_back"
+      icon="res://ic_arrow_back_white"
       (tap)="goBack()">
   </NavigationButton>
 </ActionBar>
