--- a/nativescript/app/quotes/quotes.component.html
+++ b/nativescript/app/quotes/quotes.component.html
@@ -2,7 +2,7 @@
   <NavigationButton
       *ngIf="quotesBy !== 'all' && quotesBy !== 'favourites'"
       text="Back"
-      android.systemIcon="ic_menu_back"
+      icon="res://ic_arrow_back_white"
       (tap)="goBack()">
   </NavigationButton>
 </ActionBar>
