--- a/nativescript/app/shared/side-drawer.component.html
+++ b/nativescript/app/shared/side-drawer.component.html
@@ -1,9 +1,13 @@
 <RadSideDrawer [transition]="drawerTransition">
   <StackLayout tkDrawerContent class="sidedrawer-left">
     <StackLayout class="sidedrawer-header">
+      <Image
+          class="sidedrawer-header-image"
+          src="res://logo">
+      </Image>
       <Label
           class="sidedrawer-header-brand"
-          text="Quotes App">
+          text="NGXP Quotes App">
       </Label>
     </StackLayout>
     <StackLayout class="sidedrawer-content">
