Functionality to share quote from native mobile app added.
tns-core-modules updated to @next.

--- a/nativescript/app/quotes/quotes-list/quotes-list.component.html
+++ b/nativescript/app/quotes/quotes-list/quotes-list.component.html
@@ -34,7 +34,8 @@
                 </Button>
                 <Button
                     class="mdi borderless-btn"
-                    [text]="'mdi-share' | fonticon">
+                    [text]="'mdi-share' | fonticon"
+                    (tap)="vm.shareQuote(item)">
                 </Button>
               </StackLayout>
           </StackLayout>
