Sidedrawer minor style adjustments. Changed color theme.

--- a/nativescript/app/shared/side-drawer.component.scss
+++ b/nativescript/app/shared/side-drawer.component.scss
@@ -1,6 +1,13 @@
 @import "variables";
 
 .sidedrawer-header {
+  padding-top: 25;
+  padding-bottom: 25;
+
+  .sidedrawer-header-image{
+    margin-bottom: 10;
+  }
+
   .sidedrawer-header-brand {
     font-size: 18;
     color: $c-white;
