--- a/x-shared/styles/_variables.scss
+++ b/x-shared/styles/_variables.scss
@@ -1,9 +1,14 @@
 // Color Variables
 
 // theme colors
-$c-primary: #2874f0;
-$c-secondary: #6da4ff;
-$c-accent: #F44336;
+// $c-primary: #2874f0;
+// $c-secondary: #6da4ff;
+// $c-accent: #F44336;
+
+$c-primary: #1d2532;
+$c-secondary: #161d27;
+$c-accent: #3abdd1;
+
 $c-danger: #d50000 !default;
 
 // common colors
