Using side-drawer logo from x-shared folder in native app.

--- a/nativescript/app/shared/side-drawer.component.html
+++ b/nativescript/app/shared/side-drawer.component.html
@@ -3,7 +3,7 @@
     <StackLayout class="sidedrawer-header">
       <Image
           class="sidedrawer-header-image"
-          src="res://logo">
+          src="~/x-shared/assets/logo.png">
       </Image>
       <Label
           class="sidedrawer-header-brand"
