--- a/web/src/scss/_variables.scss
+++ b/web/src/scss/_variables.scss
@@ -12,4 +12,6 @@ $color-primary-dark: $color-secondary;
 $background-color: $c-blue-grey-50;
 $box-shadow-color: $c-grey-300;
 
+$spinner-single-color: $c-accent;
+
 $font-family: Roboto;
