Unit test cases for quotes module added.

--- a/web/src/app/quotes/quotes-list/quotes-list.component.html
+++ b/web/src/app/quotes/quotes-list/quotes-list.component.html
@@ -15,6 +15,7 @@
           <button
               mdl-button
               mdl-button-type="icon"
+              class="fav-button"
               (click)="cvm.toggleFav(quote, quotesBy)"
               mdl-colored="accent">
             <mdl-icon>{{quote.isFavourite ? 'favorite' :'favorite_border'}}</mdl-icon>
