--- a/nativescript/app/app.android.scss
+++ b/nativescript/app/app.android.scss
@@ -1,4 +1,11 @@
+// Theme variables cusomizations
 @import "variables";
-@import "core.dark.android.scss";
-@import "app-common";
 
+// Core CSS
+@import 'theme-core-scss/index';
+
+// Platform adjustments
+@import 'theme-core-scss/themes/core/platforms/index.android';
+
+// app style
+@import "app-common";
