--- a/nativescript/app/app.ios.scss
+++ b/nativescript/app/app.ios.scss
@@ -1,3 +1,11 @@
+// Theme variables cusomizations
 @import "variables";
-@import "core.dark.ios.scss";
+
+// Core CSS
+@import 'theme-core-scss/index';
+
+// Platform adjustments
+@import 'theme-core-scss/themes/core/platforms/index.ios';
+
+// app style
 @import "app-common";
