Not showing spinner when no quotes are marked as favourite.

--- a/web/src/app/quotes/quotes-list/quotes-list.component.html
+++ b/web/src/app/quotes/quotes-list/quotes-list.component.html
@@ -26,7 +26,7 @@
 
     <div
         class="spinner-container"
-        [hidden]="cvm.lstQuotes.length">
+        [hidden]="cvm.lstQuotes.length || quotesBy === 'favourites'">
       <mdl-spinner single-color active></mdl-spinner>
     </div>
   </div>
